kustomize/components/service-mesh-istio/frontend-gateway.yaml
# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: istio-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend-route
spec:
  parentRefs:
  - name: istio-gateway
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: frontend
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: productcatalogservice-route
spec:
  parentRefs:
  - name: istio-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hipstershop.ProductCatalogService/
    backendRefs:
    - name: productcatalogservice
      port: 3550
      weight: 1
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: currencyservice-route
spec:
  parentRefs:
  - name: istio-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hipstershop.CurrencyService/
    backendRefs:
    - name: currencyservice
      port: 7000
      weight: 1
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: cartservice-route
spec:
  parentRefs:
  - name: istio-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hipstershop.CartService/
    backendRefs:
    - name: cartservice
      port: 7070
      weight: 1
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: recommendationservice-route
spec:
  parentRefs:
  - name: istio-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hipstershop.RecommendationService/
    backendRefs:
    - name: recommendationservice
      port: 8080
      weight: 1
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: shippingservice-route
spec:
  parentRefs:
  - name: istio-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hipstershop.ShippingService/
    backendRefs:
    - name: shippingservice
      port: 50051
      weight: 1
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: checkoutservice-route
spec:
  parentRefs:
  - name: istio-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hipstershop.CheckoutService/
    backendRefs:
    - name: checkoutservice
      port: 5050
      weight: 1
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: adservice-route
spec:
  parentRefs:
  - name: istio-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hipstershop.AdService/
    backendRefs:
    - name: adservice
      port: 9555
      weight: 1
